objects/PRH_Iconic_Account_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>PRH_Account_Field_API__c</fullName>
        <label>Account Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Account_Object_API__c</fullName>
        <label>Account Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Account_Record_Type__c</fullName>
        <label>Account Record Type API</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Customized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRH_Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRH_Iconic_Account_Field_API__c</fullName>
        <label>Iconic Account Field API</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Iconic Account Trigger</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PRH_Account_Record_Type__c</columns>
        <columns>PRH_Account_Object_API__c</columns>
        <columns>PRH_Account_Field_API__c</columns>
        <columns>PRH_Iconic_Account_Field_API__c</columns>
        <columns>PRH_Default_Value__c</columns>
        <columns>PRH_Customized__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_DE</fullName>
        <columns>NAME</columns>
        <columns>PRH_Account_Object_API__c</columns>
        <columns>PRH_Account_Field_API__c</columns>
        <columns>PRH_Account_Record_Type__c</columns>
        <columns>PRH_Iconic_Account_Field_API__c</columns>
        <columns>PRH_Customized__c</columns>
        <columns>PRH_Default_Value__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRH_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>EUR_DE_ON_Gastronomy</value>
        </filters>
        <label>All DE</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH</fullName>
        <columns>NAME</columns>
        <columns>PRH_Account_Record_Type__c</columns>
        <columns>PRH_Iconic_Account_Field_API__c</columns>
        <columns>PRH_Account_Object_API__c</columns>
        <columns>PRH_Account_Field_API__c</columns>
        <columns>PRH_Default_Value__c</columns>
        <columns>PRH_Customized__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRH_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>EUR_CH_Horeca_Indirect,EUR_CH_Horeca_Direct</value>
        </filters>
        <filters>
            <field>PRH_Account_Object_API__c</field>
            <operation>equals</operation>
            <value>EUR_CRM_Account__c</value>
        </filters>
        <label>CH</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IAH-{00000000}</displayFormat>
        <label>Trigger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Iconic Account Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>